--- a/app/views/app_kit/_table.html.erb
+++ b/app/views/app_kit/_table.html.erb
@@ -1,5 +1,10 @@
 <div class="panelkit">
-  <div class="pk-title"><%= icon(item.icon, item.title) %></div>
+  <div class="pk-title">
+    <%= icon(item.icon, item.title) %>
+    <span class="right">
+      <%= link_to icon('filter', 'Filter'), '#', class: 'filter-trigger' %>
+    </span>
+  </div>
   <div class="pk-body">
     <% if item.get_records.count > 0 %>
     <table>
