Classified configuration and refactored AppKit::Application
The application configuration is no longer a simple hash. It is now a
full object.

The Application class has been moved from being used as a constant in
the AppKit::Module to a class variable in AppKit. Because of the dynamic
nature of the class it seemed for fitting to make it a class variable
instead of a constant.

--- a/app/views/app_kit/_nav.html.erb
+++ b/app/views/app_kit/_nav.html.erb
@@ -1,5 +1,5 @@
 <div class="nav-header">
-  <div class="application-name">AppKit Test Application</div>
+<div class="application-name"><%= AppKit.application.config.application_title %></div>
   <div class="user">
     <%= link_to 'profile', ak_path(current_user) %> | <%= link_to 'logout', app_kit.destroy_user_session_path, :method => :delete %>
   </div>
