--- a/app/assets/stylesheets/simple.css.scss
+++ b/app/assets/stylesheets/simple.css.scss
@@ -1,5 +1,14 @@
 body.simple {
+  h1 {
+    text-align:left;
+    font-weight: bold;
+    font-size: 1.8em;
+    padding-left: 15px;
+    color: #444;
+    margin-bottom: 5px;
+  }
   background: #eee;
+  padding-top: 50px;
   .simple-container {
     @include outer-container;
   }
@@ -25,7 +34,6 @@ body.simple {
     @include shift(4);
     @include pad;
     background: #fff;
-    margin-top: 30px;
     margin-bottom: 30px;
     font-family: $base-font-family;
     box-shadow: 1px 1px 1px darken($base-background-color, 10);
