--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,5 @@
 <div class="simple-container">
-<h1><%= AppKit::APP.config[:appication_name] %></h1>
+<h1><%= AppKit.application.config.application_title %></h1>
 <div class="simple-panel">
   <h2>Password recovery</h2>
 
