--- a/app/assets/stylesheets/app_kit/nav.scss
+++ b/app/assets/stylesheets/app_kit/nav.scss
@@ -1,7 +1,7 @@
 .nav-header {
-  background: #161616;
-  color: white;
+  color: #fff;
   height: 55px;
+  @include linear-gradient(#414141,#323232);
   .application-name {
     font-weight: lighter;
     font-size: 1.5em;
@@ -13,65 +13,58 @@
     float: right;
     line-height: 55px;
     padding-right: 20px;
+    color: #888;
     a {
       font-weight: bold;
       font-size: 0.8em;
       color: #888;
+      margin-right: 25px;
     }
     a:hover {
       color: #fff;
-      text-decoration: underline;
     }
   }
 }
 .nav {
-  @include linear-gradient(#414141,#323232);
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #444; 
-  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   @include clearfix;
   font-size: 0.8em;
+  padding: 15px;
   .nav-left {
     float: left;
   }
   .nav-right {
     float :right;
+    text-align: right;
   }
 
   a {
     @include transition(all, 0.5s);
-    float: left;
-    border-left: 1px solid #292929;
-    border-right: 1px solid #4A4A4A;
     font-weight: bold;
     display: inline-block;
-    color: #888;
-    padding: 10px 15px;
-    text-align: center;
+    color: #999;
+    padding: 3px 8px;
+    margin-right: 10px;
     i {
-      display: block;
-      margin: auto auto;
-      width: 44px;
-      height: 44px;
-      text-align: center;
-      border-radius: 22px;
-      line-height: 44px;
-      background: #333;
+      display: inline-block;
+      margin-right: 0px;
     }
     span {
       display: block;
     }
   }
   a:hover {
-    color: #ccc; 
+    color: $base-accent-color;
     i {
     }
   }
   a.active {
-    color: #fff; 
+    background: #eaeaea;
+    border-radius: 4px;
+    color: #555;
+    -moz-box-shadow: inset 0 0 1px rgba(0,0,0,0.25);
+    -webkit-box-shadow: inset 0 0  1px rgba(0,0,0,0.25);
+    box-shadow: inset 0 0 1px rgba(0,0,0,0.25);
     i {
-      border-color: #fff;
-      background-color: #555;
     }
   }
   a:first-child {
