Added paper_trail integration
Added paper_trail gem and setup model integeation for it. Version
history can be viewed from resource detail pages when paper_trail is
enabled for that model.

--- a/app/assets/stylesheets/app_kit/application.scss
+++ b/app/assets/stylesheets/app_kit/application.scss
@@ -23,6 +23,7 @@ $property-value-color: $base-font-color !default;
 @import "simple";
 @import "flash";
 @import "footer";
+@import "versions";
 body {
     padding: 0px;
     margin: 0px;
