--- a/app/assets/stylesheets/app_kit/panels.scss
+++ b/app/assets/stylesheets/app_kit/panels.scss
@@ -42,6 +42,12 @@
       a.danger:hover {
         color: #cc0000;
       }
+      a.warning {
+        color: #8A8B66;
+      }
+      a.warning:hover {
+        color: #A2A43D;
+      }
     }
   }
   div.pk-body {
