--- a/app/views/app_kit/resources/index.html.erb
+++ b/app/views/app_kit/resources/index.html.erb
@@ -2,8 +2,7 @@
   <li class="active"><%= resource.plural_display_name %></li>
 <% end %>
 <%= render 'app_kit/table',
-  item: AppKit::Views::Table.new(resource, records: @records) %>
-<%= paginate @records, params: { :route_set => :app_kit } %>
+  item: AppKit::Views::Table.new(resource, records: @records, page: get_page) %>
 <div class="buttons">
   <%= link_to "New #{resource.display_name}",
     new_polymorphic_path([app_kit, resource.model]),
