Added user activity view to user show page
When viewing users an activity view is now displayed that shows all
edits that user has made, assuming PaperTrail is enabled for a given
model.

A few templates were also converted from ERB to SLIM

--- a/app/views/layouts/app_kit/application.html.erb
+++ b/app/views/layouts/app_kit/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AppKit</title>
+  <title><%= AppKit.application.config.application_title %></title>
 <%= stylesheet_link_tag    "app_kit/application", media: "all" %>
 <%= javascript_include_tag "app_kit/application" %>
 <%= csrf_meta_tags %>
