Added browser refill to landing page

--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -4,6 +4,7 @@
 @import 'font-awesome';
 @import "vim";
 @import "landing";
+@import "browsers";
 
 body {
   background: darken($base-background-color, 3);
