--- a/source/index.haml
+++ b/source/index.haml
@@ -17,47 +17,60 @@
   %p
     AppKit builds user ready applications with a number of nice features and an
     attractive interface. Ready to be used out of the box.
+  .browsers
     .browser
-      .header
-        .circle.red
-        .circle.blue
-        .circle.green
-      .image.filter_ss
-    .feature-cells
-      .feature
-        %span.fa-stack.fa-lg
-          %i.fa.fa-square-o.fa-stack-2x
-          %i.fa.fa-filter.fa-stack-1x.fa-inverse
-        .content
-          .title Intelligent record filtering
-          %p
-            Automtic data-type aware filtering options for easily searching and
-            finding records.
+      .browser-top-bar
+        .browser-circle
+        .browser-circle
+        .browser-circle
+      .browser-content
+    .browser
+      .browser-top-bar
+        .browser-circle
+        .browser-circle
+        .browser-circle
+      .browser-content
+    .browser
+      .browser-top-bar
+        .browser-circle
+        .browser-circle
+        .browser-circle
+      .browser-content
+  .feature-cells
+    .feature
+      %span.fa-stack.fa-lg
+        %i.fa.fa-square-o.fa-stack-2x
+        %i.fa.fa-filter.fa-stack-1x.fa-inverse
+      .content
+        .title Intelligent record filtering
+        %p
+          Automtic data-type aware filtering options for easily searching and
+          finding records.
 
-      .feature
-        %span.fa-stack.fa-lg
-          %i.fa.fa-square-o.fa-stack-2x
-          %i.fa.fa-list.fa-stack-1x.fa-inverse
-        .content
-          .title Full RESTful actions
-          %p
-            Edit, update, create, view, and search for data and records.
-      .feature
-        %span.fa-stack.fa-lg
-          %i.fa.fa-square-o.fa-stack-2x
-          %i.fa.fa-user.fa-stack-1x.fa-inverse
-        .content
-          .title User authentication
-          %p
-            Automatic authentication and user management.
-      .feature
-        %span.fa-stack.fa-lg
-          %i.fa.fa-square-o.fa-stack-2x
-          %i.fa.fa-code.fa-stack-1x.fa-inverse
-        .content
-          .title Extendable
-          %p
-            Easily override existing functionality or build new functionality.
+    .feature
+      %span.fa-stack.fa-lg
+        %i.fa.fa-square-o.fa-stack-2x
+        %i.fa.fa-list.fa-stack-1x.fa-inverse
+      .content
+        .title Full RESTful actions
+        %p
+          Edit, update, create, view, and search for data and records.
+    .feature
+      %span.fa-stack.fa-lg
+        %i.fa.fa-square-o.fa-stack-2x
+        %i.fa.fa-user.fa-stack-1x.fa-inverse
+      .content
+        .title User authentication
+        %p
+          Automatic authentication and user management.
+    .feature
+      %span.fa-stack.fa-lg
+        %i.fa.fa-square-o.fa-stack-2x
+        %i.fa.fa-code.fa-stack-1x.fa-inverse
+      .content
+        .title Extendable
+        %p
+          Easily override existing functionality or build new functionality.
 .land-section.grey
   %h2 An easy DSL built for getting things up quickly
   %p Get apps up and running in minutes with only a few lines of code
