Added images to browsers on landing page. Corrected a few typos

--- a/source/index.haml
+++ b/source/index.haml
@@ -72,7 +72,7 @@
         %p
           Easily override existing functionality or build new functionality.
 .land-section.grey
-  %h2 An easy DSL built for getting things up quickly
+  %h2 An easy DSL built to get things up quickly
   %p Get apps up and running in minutes with only a few lines of code
   .code-box
     :code
