--- a/source/stylesheets/_browsers.scss
+++ b/source/stylesheets/_browsers.scss
@@ -74,9 +74,9 @@ $browser-content-background-3: #F0F0F0;
   }
 
   .browser-content {
-    background: url(image-path('main_ss.png'));
+    background: url(image-path('filter-ss.png'));
     background-color: $browser-content-background-1;
-    background-position: top;
+    background-position: top left;
     background-repeat: no-repeat;
     background-size: cover;
   }
@@ -110,7 +110,7 @@ $browser-content-background-3: #F0F0F0;
   }
 
   .browser-content {
-    background: url(https://raw.githubusercontent.com/thoughtbot/refills/master/source/images/refills-screenshot3.png);
+    background: url(image-path('resource-ss.png'));
     background-color: $browser-content-background-3; 
     background-position: top;
     background-repeat: no-repeat;
