Added navigation configuration
Navigation is now built using the NavigationItem class and dsl methods
were added to configure custom navigation items.

--- a/app/views/app_kit/_nav.html.slim
+++ b/app/views/app_kit/_nav.html.slim
@@ -7,10 +7,10 @@
         :method => :delete
 .nav
   .nav-left
-    - AppKit.application.nav_items(:left).each do |nav_item|
+    - AppKit.application.navigation_items(:left).each do |nav_item|
       = navigation_link(nav_item)
   .nav-right
-    - AppKit.application.nav_items(:right).each do |nav_item|
+    - AppKit.application.navigation_items(:right).each do |nav_item|
       = navigation_link(nav_item)
 
 
