--- a/spec/dummy/app/assets/stylesheets/application.css
+++ b/spec/dummy/app/assets/stylesheets/application.css
@@ -10,7 +10,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require_tree .
+e*= require_tree .
  *= require app_kit
  *= require_self
  */
