Added feature specs for Resource operations
Added feature specs and setup database_cleaner gem.

Removed unneeded specs from the dummy reporting controller. This
controller is only present to test the functionality of custom
controllers in a mounted app.

--- a/app/assets/stylesheets/simple.css.scss
+++ b/app/assets/stylesheets/simple.css.scss
@@ -1,4 +1,7 @@
 body.simple {
+  .flash-notice {
+    margin-bottom: 20px;
+  }
   h1 {
     text-align:left;
     font-weight: bold;
@@ -11,6 +14,7 @@ body.simple {
   padding-top: 50px;
   .simple-container {
     @include outer-container;
+    margin-bottom: 20px;
   }
   .empty-panel {
     @include span-columns(4);
