--- a/app/views/layouts/simple.html.erb
+++ b/app/views/layouts/simple.html.erb
@@ -7,12 +7,16 @@
     <%= csrf_meta_tags %>
   </head>
   <body class="simple">
-  <% if flash[:notice] %>
-    <div class="flash-notice"><%= flash[:notice] %></div>
-  <% end %>
-  <% if flash[:alert] %>
-    <div class="flash-error"><%= flash[:alert] %></div>
-  <% end %>
+    <div class="simple-container">
+      <% if flash[:notice] %>
+        <div class="empty-panel">
+          <div class="flash-notice"><%= flash[:notice] %></div>
+        </div>
+      <% end %>
+      <% if flash[:alert] %>
+        <div class="flash-error"><%= flash[:alert] %></div>
+      <% end %>
+    </div>
       <%= yield %>
 </body>
 </html>
