--- a/app/views/app_kit/resources/_filter_panel.html.slim
+++ b/app/views/app_kit/resources/_filter_panel.html.slim
@@ -1,7 +1,7 @@
 .filter-panel
   h2 FILTERS
   = filter_form_for resource do |form|
-    - filter_resource.fields.each do |field|
+    - filter_resource.filter_fields.each do |field|
       = form.filter(field)
     .buttons
       = form.submit 'Filter Records'
