--- a/app/views/app_kit/users/show.html.slim
+++ b/app/views/app_kit/users/show.html.slim
@@ -24,18 +24,28 @@
   .pk-title = icon('history', 'Activity')
   .pk-body
     table
-      - @record.versions.each do |version|
-        tr.data-row data-url="#{version_url(version)}"
+      - @versions.each do |version|
+        tr class="#{"data-row" if version_url(version)}" data-url="#{version_url(version)}"
           - if version.event == 'update'
-            td #{icon('edit','updated')}
-              #{version.item_type.humanize.downcase}
-              (#{link_to version.item, [app_kit, version.item]})
+            td
+              =icon('edit','updated a ')
+              =version.item_type.humanize.downcase
+              - if version.item != nil
+               == " (#{link_to version.item, [app_kit, version.item]})"
           - if version.event == 'create'
-            td #{icon('plus','created new')}
-              #{version.item_type.humanize.downcase}
-              (#{link_to version.item, [app_kit, version.item]})
+            td
+              = icon('plus','created a new ')
+              = version.item_type.humanize.downcase
+              - if version.item != nil
+                == " (#{link_to version.item, [app_kit, version.item]})"
+          - if version.event == "destroy"
+            td
+              = icon('trash', "deleted a #{version.item_type.humanize.downcase} (#{version.reify.to_s})")
           td #{time_ago_in_words version.created_at} ago
             (#{version.created_at.strftime('%m/%d/%y')})
+    .panel-footer-links
+      .left
+        = paginate(@versions)
 
 
 
