Corrected mistakes and changed header wording

--- a/source/index.haml
+++ b/source/index.haml
@@ -44,7 +44,7 @@
       .content
         .title Intelligent record filtering
         %p
-          Automtic data-type aware filtering options for easily searching and
+          Data-type aware filtering options for easily searching and
           finding records.
 
     .feature
@@ -62,7 +62,7 @@
       .content
         .title User authentication
         %p
-          Automatic authentication and user management.
+          Authentication and user management.
     .feature
       %span.fa-stack.fa-lg
         %i.fa.fa-square-o.fa-stack-2x
@@ -71,8 +71,8 @@
         .title Extendable
         %p
           Easily override existing functionality or build new functionality.
-.land-section.grey
-  %h2 An easy DSL built to get things up quickly
+.land-section.white-grey
+  %h2 An easy DSL built for getting things up quickly
   %p Get apps up and running in minutes with only a few lines of code
   .code-box
     :code
@@ -114,3 +114,6 @@
         .title Get the code
         %p
           Get the sourcecode from Github.
+.land-section.grey
+  %h2 Track and investigate record changes
+  %p Record auditing allows you to track changes to data and see who made them
