Added history tracking section to the landing page.

--- a/source/stylesheets/_browsers.scss
+++ b/source/stylesheets/_browsers.scss
@@ -95,7 +95,7 @@ $browser-content-background-3: #F0F0F0;
   .browser-content {
     background: url(image-path('main-ss.png'));
     background-color: $browser-content-background-2; 
-    background-position: top;
+    background-position: left;
     background-repeat: no-repeat;
     background-size: cover;
   }
