--- a/source/index.haml
+++ b/source/index.haml
@@ -13,10 +13,13 @@
       %i.fa.fa-github
       Code
 .land-section.red
-  %h2 Not just scaffolding
-  %p
-    AppKit builds user ready applications with a number of nice features and an
-    attractive interface. Ready to be used out of the box.
+  .centered-p-wrapper
+    .centered-p
+      %h2 Not just scaffolding. Ready out of the box.
+      %p
+        AppKit is a framework built, ontop of rails, to generate data flow
+        applications quickly and easily. It abstracts common code to a simple
+        DSL, Eliminating the need to write controllers, views, or tests.
   .browsers
     .browser
       .browser-top-bar
@@ -62,7 +65,7 @@
       .content
         .title User authentication
         %p
-          Authentication and user management.
+          Authentication and user management automatically integrated.
     .feature
       %span.fa-stack.fa-lg
         %i.fa.fa-square-o.fa-stack-2x
@@ -73,7 +76,7 @@
           Easily override existing functionality or build new functionality.
 .land-section.white-grey
   %h2 An easy DSL built for getting things up quickly
-  %p Get apps up and running in minutes with only a few lines of code
+  %p Get apps up and running in minutes with only a few lines of code.
   .code-box
     :code
       # lang: ruby
@@ -116,4 +119,19 @@
           Get the sourcecode from Github.
 .land-section.grey
   %h2 Track and investigate record changes
-  %p Record auditing allows you to track changes to data and see who made them
+  %p Record auditing allows you to track changes to data and see who made them.
+  .image-section
+    .image-column
+      = image_tag 'time-machine.png'
+    .text-column
+      %h2 Record changes and history
+      %p
+        Enable history tracking for any model and AppKit's interface will
+        automaitcally allow you to see any changes to that record and view
+        it as it was at that time. Each iteration of the record is
+        independently stored for auditing purposes.
+      %h2 Track user actions
+      %p
+        Activity tracking is enabled for all history tracked resources.
+        You can easily see the activity of any user to audit what they changed
+        and when.
