--- a/source/stylesheets/main.css.scss
+++ b/source/stylesheets/main.css.scss
@@ -151,9 +151,14 @@ footer {
   padding-bottom: 20px;
   text-align: center;
   font-size: 0.8em;
-  color: #999;
+  color: #555;
   a {
     color: #161616;
+    font-weight: bold;
+  }
+  a:hover {
+    text-decoration: underline;
+    color: #000;
   }
 }
 
