Added nested create links to resource show
Added create links for nested resources to allow for creating associated
records when records are present.

--- a/app/views/app_kit/resources/show.html.slim
+++ b/app/views/app_kit/resources/show.html.slim
@@ -52,15 +52,16 @@
                     - if field.association.active_record == assoc.klass
                       - next
                   td =format_attribute(assoc_record, field)
+        .panel-footer-links
+          .right
+            = link_to "Create #{assoc.name.to_s.humanize.singularize}",
+                new_polymorphic_path([app_kit, @record, assoc.klass])
       - else
         p.no-data
           = "No #{assoc.name.to_s.humanize.pluralize.downcase} found. "
           = link_to 'Create',
             new_polymorphic_path([app_kit, @record, assoc.klass])
           = " a new #{assoc.name.to_s.humanize.singularize}"
-
-
-
 
 
 
