Bug fixes and slight improvements
Fixed a bug that caused fields with blocks to not display values
correctly.

Added enum custom input and configuration to field DSL.

Added display_name to field DSL

Resource forms were using the raw name for the field instead of the
display_name.

Added a no-data output to the user history when there have not been any
trackable changes.

Changed association tables in the resource#show template to not display
foreign key fields for the associated parent record. Before they were
simply hiding all foreign_key fields. This was problematic for models
with multiple foreign keys.

--- a/app/views/app_kit/resources/_form.html.slim
+++ b/app/views/app_kit/resources/_form.html.slim
@@ -18,6 +18,6 @@
               label =field.display_name
               .field_value =@record.send(field.name)
           - else
-            = f.input field.name, :as => field.editor
+            = f.input field.name, field.editor_options
       .buttons
         = f.submit
